--- a/zenmind_frontend/package.json
+++ b/zenmind_frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.13.1",
     "cra-template": "1.2.0",
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.475.0",
